fixed scrollbar color

--- a/src/contentScript/content-script.css
+++ b/src/contentScript/content-script.css
@@ -12,10 +12,22 @@
 }
 
 #overlay-content {
-    padding: 20px;
-    overflow-y: auto; /* Enable vertical scrolling */
-    width: 350px; /* Width of the overlay */
-    height: 200px; /* Height of the overlay */
+  padding: 20px;
+  overflow-y: auto; /* Enable vertical scrolling */
+  width: calc(100% - 20px); /* Adjust width to account for padding */
+  max-height: calc(100% - 100px); /* Adjust max-height to fit button and padding */
+}
+
+#overlay-content::-webkit-scrollbar {
+  width: 10px; /* Width of the scrollbar */
+}
+
+#overlay-content::-webkit-scrollbar-thumb {
+  background-color: #555; /* Darker gray color for scrollbar thumb */
+}
+
+#overlay-content::-webkit-scrollbar-track {
+  background-color: #f4f4f4; /* Background color for scrollbar track */
 }
 
 .message {
@@ -52,7 +64,7 @@
   bottom: 10px; /* Adjust the distance from the bottom as needed */
   left: 50%; /* Position the button at the horizontal center */
   transform: translateX(-50%); /* Center the button horizontally */
-  background-color: #007bff; /* Blue color for the button */
+  background-color: #c6d1dc; /* Blue color for the button */
   color: #fff; /* White color for the button text */
   border: none;
   border-radius: 50%; /* Make the button circular */
@@ -64,12 +76,4 @@
   justify-content: center;
   align-items: center;
   transition: background-color 0.3s; /* Add transition effect for smoother color change */
-}
-
-#recording-button.active {
-  background-color: #dc3545; /* Red color for the button when active (pressed) */
-}
-
-.recording-icon {
-  font-size: 24px;
 }
